# documentdb-driver-testing

./: DRIVERS.md  README.md  package-lock.json  package.json  run.ps1  tsconfig.json
adapters/nodejs/: index.ts
adapters/nodejs-v6.x/: package-lock.json  package.json  shim.ts
adapters/nodejs-v7.2.0/: package-lock.json  package.json  shim.ts
adapters/rust-2.x/: Cargo.toml
adapters/rust-2.x/src/: main.rs
adapters/rust-3.x/: Cargo.toml
adapters/rust-3.x/src/: main.rs
adapters/rust/src/: main.rs
reports/: 2026.05.06_matrix_report.html
runtime/: documentdb-docker-compose.yml  mongodb-docker-compose.yml
src/: index.ts
src/protocol/: DriverAdapter.ts  SubprocessAdapter.ts  types.ts
src/report/: generate.ts
src/reporters/: JUnitReporter.ts  JsonReporter.ts  MatrixJsonReporter.ts  ProgressReporter.ts  Reporter.ts  TapReporter.ts
src/runner/: Harness.ts  ScenarioLoader.ts  TestSession.ts  VersionMatrix.ts
tests/aggregation/: lookup.yml  pipeline.yml
tests/crud/: array_operators.yml  bulk_write.yml  delete.yml  distinct.yml  find.yml  find_and_modify.yml  find_options.yml  insert.yml  update.yml
tests/errors/: basic.yml
tests/indexes/: basic.yml
tests/query/: advanced.yml  operators.yml
tests/sessions/: basic.yml
tests/transactions/: basic.yml
