[package]
name = "documentdb-driver-shim-rust-2x"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "shim"
path = "src/main.rs"

[dependencies]
mongodb = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bson = { version = "2", features = ["serde_with"] }
futures-util = "0.3"
